Add opt-in sibling-worktree lifecycle resource soak
- Exercise retained pins, exact public queries and existing GC across
  bounded edit/refresh cycles in two invented disposable worktrees.
- Report resource samples and unavailable metrics without performance
  thresholds or unimplemented retention-policy claims.
- Add an assertion-red/green short smoke and document standalone use.

Amp-Thread-ID: https://ampcode.com/threads/T-01a0c8d3-ef54-7689-8f7d-1a096fa8418e
Co-authored-by: Amp <amp@ampcode.com>